feat(OH-148-edit-user): Add edit user API integration, form validation and state building

--- a/libs/shared/ui/common-form-field/src/lib/common-form-field.component.html
+++ b/libs/shared/ui/common-form-field/src/lib/common-form-field.component.html
@@ -6,15 +6,20 @@
     *ngIf='control.errors?.required || control.errors?.notEmpty'>
     {{label}} {{errorMessage.required}}</mat-error>
   <mat-error
-    *ngIf='control.errors?.invalid'>{{errorMessage.invalid}}</mat-error>
+    *ngIf='control.errors?.invalid || control.errors?.numeric'>{{errorMessage.invalid}}</mat-error>
+  <mat-error
+    *ngIf='control.errors?.hexColor'>{{errorMessage.invalid}}</mat-error>
   <mat-error
     *ngIf='(control.errors?.alpha || control.errors?.pattern)'>{{errorMessage.invalid}}</mat-error>
   <mat-error
-    *ngIf='control.errors?.maxlength'>Must not exceed {{control.errors?.maxlength.requiredLength}} character limit,
-    Current length is {{control.errors?.maxlength.actualLength}}</mat-error>
-  <mat-error
-    *ngIf='control.errors?.minlength'>Must be greater than {{control.errors?.minlength.requiredLength}} characters
+    *ngIf='control.errors?.maxLength'>Must not
+    exceed {{control.errors?.maxLength?.refValues[1]}} character limit
   </mat-error>
+  <mat-error
+    *ngIf='control.errors?.minlength'>Must be greater than {{control.errors?.minlength?.requiredLength}} characters
+  </mat-error>
+  <mat-error
+    *ngIf='control.errors?.min'>Invalid! Must be greater than {{control.errors?.min?.min}}</mat-error>
   <mat-error
     *ngIf='control.errors?.upperCase && !control.errors?.invalid'>{{label}} must be is uppercase only
   </mat-error>
