--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -49,7 +49,7 @@
                     <mat-icon>visibility</mat-icon>
                     <span>{{constantDataService.BUTTON_NAME.VIEW | titlecase}}</span>
                   </button>
-                  <button mat-menu-item disabled>
+                  <button mat-menu-item [routerLink]='["/users", "edit", row?.id]'>
                     <mat-icon>create</mat-icon>
                     <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                   </button>
