--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -7,12 +7,14 @@
 
             <ng-container matColumnDef='name'>
               <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.FIRST_NAME | titlecase}}</th>
-              <td mat-cell *matCellDef='let element' [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
+              <td mat-cell *matCellDef='let element'
+                  [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
             </ng-container>
 
             <ng-container matColumnDef='email'>
               <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.EMAIL_ID | titlecase}} </th>
-              <td mat-cell *matCellDef='let element' [matTooltip]='element.email'> {{(element.email | maxStringLimit) || '--'}} </td>
+              <td mat-cell *matCellDef='let element'
+                  [matTooltip]='element.email'> {{(element.email | maxStringLimit) || '--'}} </td>
             </ng-container>
 
             <ng-container matColumnDef='country'>
@@ -31,7 +33,7 @@
               <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.STATUS | titlecase}} </th>
               <td mat-cell *matCellDef='let element'>
                 <hidden-innovation-common-data-field-status
-                  [text]='(element.status ? userStatusEnum.ACTIVE : userStatusEnum.INACTIVE) | titlecase'
+                  [text]='((element.status === null || element.status === undefined) ? "--" : (element.status ? userStatusEnum.ACTIVE : userStatusEnum.BLOCKED) | titlecase)'
                   [chipType]='element.status ? statusChipType.SUCCESS : statusChipType.ERROR'
                 ></hidden-innovation-common-data-field-status>
               </td>
@@ -49,7 +51,7 @@
                     <mat-icon>visibility</mat-icon>
                     <span>{{constantDataService.BUTTON_NAME.VIEW | titlecase}}</span>
                   </button>
-                  <button mat-menu-item [routerLink]='["/users", "edit", row?.id]'>
+                  <button *ngIf='false' mat-menu-item [routerLink]='["/users", "edit", row?.id]'>
                     <mat-icon>create</mat-icon>
                     <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                   </button>
