--- a/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
+++ b/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
@@ -32,7 +32,7 @@
         <div class='row mb-1'>
           <div class='col-12'>
             <mat-form-field class='w-100'>
-              <mat-label>Name</mat-label>
+              <mat-label>{{constantDataService.FIELD_NAME.NAME | titlecase}}</mat-label>
               <input matInput autocomplete='no' type='text' formControlName='name' required>
               <mat-error
                 *ngIf='editProfileForm.controls.name.errors?.required'>
@@ -50,19 +50,12 @@
         <div class='row'>
           <div class='col-12'>
             <mat-form-field class='w-100'>
-              <mat-label>Username</mat-label>
-              <input matInput autocomplete='no' type='text' formControlName='username' required>
+              <mat-label>{{constantDataService.FIELD_NAME.EMAIL_ID | titlecase}}</mat-label>
+              <input matInput autocomplete='no' type='text' formControlName='email' required>
               <mat-error
-                *ngIf='editProfileForm.controls.username.errors?.required'>
-                Name {{formValidationService.fieldValidationMessage.required}}</mat-error>
+                *ngIf='editProfileForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
               <mat-error
-                *ngIf='editProfileForm.controls.username.errors?.alphaNumeric'>Must not contain any special character or
-                white spaces.
-              </mat-error>
-              <mat-error
-                *ngIf='editProfileForm.controls.username.errors?.maxLength'>Must not
-                exceed {{formValidationService.FIELD_VALIDATION_VALUES.USERNAME_LENGTH}} character limit
-              </mat-error>
+                *ngIf='editProfileForm.controls.email.errors?.email'>{{formValidationService.emailValidationMessage.invalid}}</mat-error>
             </mat-form-field>
           </div>
         </div>
