feat(OH-318-total-card/user-and-download): Add card for user and app download counts

--- a/apps/optimal-human/src/styles.scss
+++ b/apps/optimal-human/src/styles.scss
@@ -345,7 +345,18 @@ table.mat-table {
 
 .text-color {
   &__primary {
-    color: $dark-primary-text;
+    color: var(--primary-color);
+    &--light {
+      color: var(--primary-lighter-color);
+    }
+  }
+
+  &__error {
+    color: #ec795f;
+  }
+
+  &__success {
+    color: #00C853;
   }
 }
 
