--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -1,23 +1,23 @@
 <div class='p-4'>
   <div class='container-fluid p-0'>
     <div class='row'>
-      <div class='col-8'>
+      <div class='col-10'>
         <div class='container-fluid p-0'>
           <div class='row mb-4'>
             <div class='col-6 col-lg-3'>
               <hidden-innovation-dashboard-count-card
                 [count]='store.totalUsers$ | async'
                 [isLoading]='store.isChangeLoading$ | async'
+                [change]='-89'
                 cardTitle='Total Users'
                 icon='people'
               ></hidden-innovation-dashboard-count-card>
             </div>
             <div class='col-6 col-lg-3'>
               <hidden-innovation-dashboard-count-card
-                [count]='0'
-                [isLoading]='false'
-                cardTitle='Total Tests'
-                icon='task'
+                [isLoading]='store.isChangeLoading$ | async'
+                cardTitle='Total App Downloads'
+                icon='file_download'
               ></hidden-innovation-dashboard-count-card>
             </div>
           </div>
