--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class='p-4'>
   <div class='container-fluid p-0'>
     <div class='row'>
-      <div class='col-10'>
+      <div class='col-12'>
         <div class='container-fluid p-0'>
           <div class='row mb-4'>
             <div class='col-6 col-lg-3'>
@@ -21,21 +21,34 @@
               ></hidden-innovation-dashboard-count-card>
             </div>
           </div>
-          <div class='row'>
-            <div class='col-12'>
-<!--              <mat-card>-->
-<!--                <h1 class='card-header'>Statistics</h1>-->
-<!--                <mat-card-content>-->
-<!--                  <canvas baseChart-->
-<!--                          chartType='line'-->
-<!--                          [colors]='chartColors'-->
-<!--                          [datasets]='chartData'-->
-<!--                          [labels]='chartLabels'-->
-<!--                          [legend]='chartLegend'-->
-<!--                          [options]='chartOptions'>-->
-<!--                  </canvas>-->
-<!--                </mat-card-content>-->
-<!--              </mat-card>-->
+          <div class='row mb-4'>
+            <div class='col-6'>
+              <mat-card>
+                <mat-card-content>
+                  <canvas baseChart
+                          chartType='line'
+                          [colors]='chartColors'
+                          [datasets]='chartData'
+                          [labels]='chartLabels'
+                          [legend]='chartLegend'
+                          [options]='chartOptions'>
+                  </canvas>
+                </mat-card-content>
+              </mat-card>
+            </div>
+            <div class='col-6'>
+              <mat-card>
+                <mat-card-content>
+                  <canvas baseChart
+                          chartType='line'
+                          [colors]='chartColors'
+                          [datasets]='chartData'
+                          [labels]='chartLabels'
+                          [legend]='chartLegend'
+                          [options]='chartOptions'>
+                  </canvas>
+                </mat-card-content>
+              </mat-card>
             </div>
           </div>
         </div>
