--- a/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
+++ b/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
@@ -1,24 +1,5 @@
 <form [formGroup]='editProfileForm' (ngSubmit)='submit()'>
   <div class='p-4'>
-    <div class='container-fluid p-0'>
-      <div class='row mb-4 '>
-        <div class='col-12 d-flex align-items-center justify-content-end'>
-          <button
-            mat-flat-button
-            [disabled]='store.isEditLoading$ | async'
-            class='ml-3'
-            color='primary' type='submit'>Update
-          </button>
-          <button
-            [disabled]='store.isEditLoading$ | async'
-            mat-stroked-button type='button'
-            class='ml-3'
-            [routerLink]="['dashboard']">Cancel
-          </button>
-        </div>
-      </div>
-    </div>
-
     <mat-card class='p-0'>
       <div class='container align-self-start w-50  ml-0 p-4'>
         <div class='row'>
@@ -28,9 +9,9 @@
         </div>
       </div>
       <mat-divider></mat-divider>
-      <div class='container align-self-start w-50  ml-0 p-4'>
+      <div class='container-fluid align-self-start  ml-0 p-4'>
         <div class='row mb-1'>
-          <div class='col-12'>
+          <div class='col-6'>
             <mat-form-field class='w-100'>
               <mat-label>{{constantDataService.FIELD_NAME.NAME | titlecase}}</mat-label>
               <input matInput autocomplete='no' type='text' formControlName='name' required>
@@ -48,7 +29,7 @@
         </div>
 
         <div class='row'>
-          <div class='col-12'>
+          <div class='col-6'>
             <mat-form-field class='w-100'>
               <mat-label>{{constantDataService.FIELD_NAME.EMAIL_ID | titlecase}}</mat-label>
               <input matInput autocomplete='no' type='text' formControlName='email' required>
@@ -59,6 +40,24 @@
             </mat-form-field>
           </div>
         </div>
+
+        <div class='row'>
+          <div class='col-12 d-flex align-items-center justify-content-end'>
+            <button
+              [disabled]='store.isEditLoading$ | async'
+              mat-stroked-button type='button'
+              class='ml-3'
+              [routerLink]="['dashboard']">Cancel
+            </button>
+            <button
+              mat-flat-button
+              [disabled]='store.isEditLoading$ | async'
+              class='ml-3'
+              color='primary' type='submit'>Update
+            </button>
+          </div>
+        </div>
+
       </div>
     </mat-card>
   </div>
