--- a/libs/shared/ui/dashboard-count-card/src/lib/dashboard-count-card.component.html
+++ b/libs/shared/ui/dashboard-count-card/src/lib/dashboard-count-card.component.html
@@ -5,16 +5,15 @@
       <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>{{cardTitle ? (cardTitle | titlecase | maxStringLimit) : '--'}}</h4>
     </div>
     <ng-template [ngIf]='isLoading' [ngIfElse]='statsLoadingElse'>
-      <div class='d-flex overflow-hidden'>
-        <content-loader viewBox='0 0 250 40' class='w-100 h-100' backgroundColor='#eeeeee'>
-          <svg:rect x='0' y='0' rx='3' ry='3' width='250' height='40' />
-        </content-loader>
-      </div>
-      <div class='d-flex align-items-center overflow-hidden'>
-        <content-loader viewBox='0 0 250 18' class='w-100 h-100' backgroundColor='#eeeeee'>
-          <svg:rect x='0' y='0' rx='3' ry='3' width='250' height='18' />
-        </content-loader>
-      </div>
+      <hidden-innovation-shimmer
+        [rounded]='true'
+        class='mb-2'
+        height='28px'
+      ></hidden-innovation-shimmer>
+      <hidden-innovation-shimmer
+        [rounded]='true'
+        height='16px'
+      ></hidden-innovation-shimmer>
     </ng-template>
     <ng-template #statsLoadingElse>
       <div class='d-flex'>
