feat(doughnut-chart): ui complete

--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -91,41 +91,44 @@
                     <div class='container-fluid p-0 w-100'>
                       <div class='row mb-2'>
                         <div class='col-12'>
-                          <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.cardio}'>
+                          <div class='w-100' mat-stroked-button [ngStyle]='{"color": colors.cardio}'>
                             <div class='d-flex align-items-center pt-1 py-0'>
-                              <mat-icon>people_alt</mat-icon>
-                              <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                                <h4 class='mat-h4 m-0'>Cardio</h4>
-                                <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.strength}'>20 %</h1>
+                              <mat-icon class='test-icon'>fiber_manual_record</mat-icon>
+                            
+                              <div class='d-flex  align-items-center justify-content-between' [ngStyle]='{width: "calc(100% - 42px)"}'>
+                                <h3 class='mat-h4 m-0 ml-3'>Cardio</h3>
+                                <h3 class='mat-h1 m-0' [ngStyle]='{"color": colors.cardio}'>20 %</h3>
                               </div>
                             </div>
-                          </button>
+                          </div>
                         </div>
                       </div>
                       <div class='row mb-2'>
                         <div class='col-12'>
-                          <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.strength}'>
+                          <div class='w-100' mat-stroked-button [ngStyle]='{"color": colors.strength}'>
                             <div class='d-flex align-items-center pt-1 py-0'>
-                              <mat-icon>people_alt</mat-icon>
-                              <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                                <h4 class='mat-h4 m-0'>Strength</h4>
-                                <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.strength}'>20 %</h1>
+                              <mat-icon class='test-icon'>fiber_manual_record</mat-icon>
+                            
+                              <div class='d-flex  align-items-center justify-content-between' [ngStyle]='{width: "calc(100% - 42px)"}'>
+                                <h3 class='mat-h4 m-0 ml-3'>Strength</h3>
+                                <h3 class='mat-h1 m-0' [ngStyle]='{"color": colors.strength}'>20 %</h3>
                               </div>
                             </div>
-                          </button>
+                          </div>
                         </div>
                       </div>
                       <div class='row mb-2'>
                         <div class='col-12'>
-                          <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.function}'>
+                          <div class='w-100' mat-stroked-button [ngStyle]='{"color": colors.function}'>
                             <div class='d-flex align-items-center pt-1 py-0'>
-                              <mat-icon>people_alt</mat-icon>
-                              <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                                <h4 class='mat-h4 m-0'>Function</h4>
-                                <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.strength}'>20 %</h1>
+                              <mat-icon class='test-icon'>fiber_manual_record</mat-icon>
+                            
+                              <div class='d-flex  align-items-center justify-content-between' [ngStyle]='{width: "calc(100% - 42px)"}'>
+                                <h3 class='mat-h4 m-0 ml-3'>Funtion</h3>
+                                <h3 class='mat-h1 m-0' [ngStyle]='{"color": colors.function}'>20 %</h3>
                               </div>
                             </div>
-                          </button>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -162,80 +165,86 @@
                     <div class='container-fluid p-0 w-100'>
                       <div class='row mb-2'>
                         <div class='col-12'>
-                          <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test1}'>
+                          <div class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test1}'>
                             <div class='d-flex align-items-center pt-1 py-0'>
-                              <mat-icon>people_alt</mat-icon>
-                              <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                                <h4 class='mat-h4 m-0'>Test 1</h4>
-                                <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.test1}'>10 %</h1>
+                              <mat-icon class='test-icon'>fiber_manual_record</mat-icon>
+                            
+                              <div class='d-flex  align-items-center justify-content-between' [ngStyle]='{width: "calc(100% - 42px)"}'>
+                                <h3 class='mat-h4 m-0 ml-3'>Test 1</h3>
+                                <h3 class='mat-h1 m-0' [ngStyle]='{"color": colors.test1}'>10 %</h3>
                               </div>
                             </div>
-                          </button>
+                          </div>
                         </div>
                       </div>
                       <div class='row mb-2'>
                         <div class='col-12'>
-                          <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test2}'>
+                          <div class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test2}'>
                             <div class='d-flex align-items-center pt-1 py-0'>
-                              <mat-icon>people_alt</mat-icon>
-                              <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                                <h4 class='mat-h4 m-0'>Test 2</h4>
-                                <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.test2}'>20 %</h1>
+                              <mat-icon class='test-icon'>fiber_manual_record</mat-icon>
+                            
+                              <div class='d-flex  align-items-center justify-content-between' [ngStyle]='{width: "calc(100% - 42px)"}'>
+                                <h3 class='mat-h4 m-0 ml-3'>Test 2</h3>
+                                <h3 class='mat-h1 m-0' [ngStyle]='{"color": colors.test2}'>20 %</h3>
                               </div>
                             </div>
-                          </button>
+                          </div>
                         </div>
                       </div>
                       <div class='row mb-2'>
                         <div class='col-12'>
-                          <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test3}'>
+                          <div class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test3}'>
                             <div class='d-flex align-items-center pt-1 py-0'>
-                              <mat-icon>people_alt</mat-icon>
-                              <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                                <h4 class='mat-h4 m-0'>Test 3</h4>
-                                <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.test3}'>30 %</h1>
+                              <mat-icon class='test-icon'>fiber_manual_record</mat-icon>
+                            
+                              <div class='d-flex  align-items-center justify-content-between' [ngStyle]='{width: "calc(100% - 42px)"}'>
+                                <h3 class='mat-h4 m-0 ml-3'>Test 3</h3>
+                                <h3 class='mat-h1 m-0' [ngStyle]='{"color": colors.test3}'>30 %</h3>
                               </div>
                             </div>
-                          </button>
+                          </div>
                         </div>
                       </div>
                       <div class='row mb-2'>
                         <div class='col-12'>
-                          <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test4}'>
+                          <div class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test4}'>
                             <div class='d-flex align-items-center pt-1 py-0'>
-                              <mat-icon>people_alt</mat-icon>
-                              <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                                <h4 class='mat-h4 m-0'>Test 4</h4>
-                                <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.test4}'>50 %</h1>
+                              <mat-icon class='test-icon'>fiber_manual_record</mat-icon>
+                            
+                              <div class='d-flex  align-items-center justify-content-between' [ngStyle]='{width: "calc(100% - 42px)"}'>
+                                <h3 class='mat-h4 m-0 ml-3'>Test 4</h3>
+                                <h3 class='mat-h1 m-0' [ngStyle]='{"color": colors.test4}'>50 %</h3>
                               </div>
                             </div>
-                          </button>
+                          </div>
                         </div>
                       </div>
                       <div class='row mb-2'>
                         <div class='col-12'>
-                          <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test5}'>
+                          <div class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test5}'>
                             <div class='d-flex align-items-center pt-1 py-0'>
-                              <mat-icon>people_alt</mat-icon>
-                              <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                                <h4 class='mat-h4 m-0'>Test 5</h4>
-                                <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.test5}'>70 %</h1>
+                              <mat-icon class='test-icon'>fiber_manual_record</mat-icon>
+                            
+                              <div class='d-flex  align-items-center justify-content-between' [ngStyle]='{width: "calc(100% - 42px)"}'>
+                                <h3 class='mat-h4 m-0 ml-3'>Test 5</h3>
+                                <h3 class='mat-h1 m-0' [ngStyle]='{"color": colors.test5}'>70 %</h3>
                               </div>
                             </div>
-                          </button>
+                          </div>
                         </div>
                       </div>
                       <div class='row mb-2'>
                         <div class='col-12'>
-                          <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test6}'>
+                          <div class='w-100' mat-stroked-button [ngStyle]='{"color": colors.test6}'>
                             <div class='d-flex align-items-center pt-1 py-0'>
-                              <mat-icon>people_alt</mat-icon>
-                              <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                                <h4 class='mat-h4 m-0'>Test 6</h4>
-                                <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.test6}'>20 %</h1>
+                              <mat-icon class='test-icon'>fiber_manual_record</mat-icon>
+                            
+                              <div class='d-flex  align-items-center justify-content-between' [ngStyle]='{width: "calc(100% - 42px)"}'>
+                                <h3 class='mat-h4 m-0 ml-3'>Test 6</h3>
+                                <h3 class='mat-h1 m-0' [ngStyle]='{"color": colors.test6}'>20 %</h3>
                               </div>
                             </div>
-                          </button>
+                          </div>
                         </div>
                       </div>
                     </div>
