--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -70,12 +70,12 @@
       </div>
       <div class='row mt-2'>
         <div class='col-6 d-flex align-items-center'>
-          <mat-spinner class='ml-4' [diameter]='18' *ngIf='facade.isListLoading$ | async'></mat-spinner>
+          <mat-spinner class='ml-4' [diameter]='18' *ngIf='store.isLoading$ | async'></mat-spinner>
         </div>
         <div class='col-6'>
           <mat-paginator
-            [disabled]='facade.isListLoading$ | async'
-            [pageSize]='pageSize' [length]='facade.count$ | async' [pageIndex]='paginatorIndex'
+            [disabled]='store.isLoading$ | async'
+            [pageSize]='pageSize' [length]='store.count$ | async' [pageIndex]='paginatorIndex'
             [pageSizeOptions]='pageSizeOptions'
             (page)='pageEvent = $event; onPaginateChange($event)'></mat-paginator>
         </div>
