--- a/libs/user/user-details/src/lib/user-details.component.html
+++ b/libs/user/user-details/src/lib/user-details.component.html
@@ -1,5 +1,4 @@
 <div class='p-4'>
-
   <div class='container-fluid p-0'>
     <div class='row mb-4 '>
       <div class='col-12 d-flex align-items-center justify-content-end'>
@@ -11,7 +10,7 @@
       </div>
     </div>
   </div>
-  <ng-template [ngIf]='store.state$ | async' let-user>
+  <ng-template [ngIf]='user$ | async' let-user>
     <mat-card class='p-0'>
 
       <div class='container-fluid p-4'>
