--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -55,9 +55,10 @@
                     <mat-icon>create</mat-icon>
                     <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                   </button>
-                  <button mat-menu-item disabled>
-                    <mat-icon>delete</mat-icon>
-                    <span>{{constantDataService.BUTTON_NAME.DELETE | titlecase}}</span>
+                  <button mat-menu-item [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
+                          (click)='toggleBlock(row.id, row.is_blocked)' type='button'>
+                    <mat-icon>{{row.is_blocked ? "check_circle_outline" : "block"}}</mat-icon>
+                    <span>{{(row.is_blocked ? constantDataService.BUTTON_NAME.UN_BLOCK : constantDataService.BUTTON_NAME.BLOCK) | titlecase}}</span>
                   </button>
                 </mat-menu>
               </td>
