--- a/libs/user/user-details/src/lib/user-details.component.html
+++ b/libs/user/user-details/src/lib/user-details.component.html
@@ -5,7 +5,7 @@
         <div class='col-12 d-flex align-items-center justify-content-end'>
           <button [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
                   mat-flat-button color='{{user.is_blocked ? "accent" : "warn"}}' class='ml-3'
-                  (click)='toggleBlock(userID, user.is_blocked)' type='button'>
+                  (click)='store.toggleBlock(userID, user.is_blocked)' type='button'>
             {{(user.is_blocked ? constantDataService.BUTTON_NAME.UN_BLOCK : constantDataService.BUTTON_NAME.BLOCK) | titlecase}}
           </button>
         </div>
