--- a/apps/optimal-human/src/app/app.component.html
+++ b/apps/optimal-human/src/app/app.component.html
@@ -1,69 +1,68 @@
 <mat-sidenav-container autosize>
-  <mat-sidenav *ngIf="authFacade.loggedIn$ | async" [mode]="isTablet ? 'over' : 'side'" (closed)="isSliding = false"
-               (opened)="isSliding = false"
-               [fixedInViewport]="true" [opened]="sideBarOpen">
-    <div class="d-flex flex-column  h-100">
-      <div class="text-center mt-5 mb-5 d-flex flex-column align-items-center">
-        <img src="assets/white_logo.svg" alt="" class="oh-logo img-fluid">
-        <h4 class="font-calibri--bold mat-h4 mb-0 mt-2 oh-logo__text">Optimal Humans</h4>
+  <mat-sidenav *ngIf='authFacade.loggedIn$ | async' [mode]="isTablet ? 'over' : 'side'" (closed)='isSliding = false'
+               (opened)='isSliding = false'
+               [fixedInViewport]='true' [opened]='sideBarOpen'>
+    <div class='d-flex flex-column  h-100'>
+      <div class='text-center mt-5 mb-5 d-flex flex-column align-items-center'>
+        <img src='assets/white_logo.svg' alt='' class='oh-logo img-fluid'>
+        <h4 class='font-calibri--bold mat-h4 mb-0 mt-2 oh-logo__text'>Optimal Humans</h4>
       </div>
       <mat-list>
-        <ng-template ngFor [ngForOf]="uiStore.navItems$ | async" let-navData>
-          <ng-template [ngIf]="navData.navItems.length > 1">
+        <ng-template ngFor [ngForOf]='uiStore.navItems$ | async' let-navData>
+          <ng-template [ngIf]='navData.navItems.length > 1'>
             <mat-divider></mat-divider>
-            <div mat-subheader class="text-muted">{{navData.name}}</div>
+            <div mat-subheader class='text-muted'>{{navData.name}}</div>
           </ng-template>
-          <mat-list-item routerLinkActive='active' [routerLink]='item.path' matRipple [disableRipple]="false" [ngStyle]="{cursor: 'pointer'}"
-                         *ngFor="let item of navData.navItems">
-            <mat-icon class="text-white" mat-list-icon>{{item.icon}}</mat-icon>
-            <div mat-line class="text-white">{{item.label}}</div>
+          <mat-list-item routerLinkActive='active' [routerLink]='item.path' matRipple [disableRipple]='false'
+                         [ngStyle]="{cursor: 'pointer'}"
+                         *ngFor='let item of navData.navItems'>
+            <mat-icon class='text-white' mat-list-icon>{{item.icon}}</mat-icon>
+            <div mat-line class='text-white'>{{item.label}}</div>
           </mat-list-item>
         </ng-template>
       </mat-list>
     </div>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar *ngIf="authFacade.loggedIn$ | async">
-      <div class="d-flex align-items-center">
-        <button mat-icon-button class="primary-color" color="primary" (click)="sideBarToggle()">
+    <mat-toolbar *ngIf='authFacade.loggedIn$ | async'>
+      <div class='d-flex align-items-center'>
+        <button mat-icon-button class='primary-color' color='primary' (click)='sideBarToggle()'>
           <mat-icon>menu</mat-icon>
         </button>
-        <ng-container *ngIf="(breadcrumbService.breadcrumbs$ | async) as br">
-          <h2 class="mat-h2 m-0 mx-3 text-dark font-sf-pro">{{getPageTitle(br)}}</h2>
+        <ng-container *ngIf='(breadcrumbService.breadcrumbs$ | async) as br'>
+          <h2 class='mat-h2 m-0 mx-3 text-dark font-sf-pro'>{{getPageTitle(br)}}</h2>
         </ng-container>
       </div>
-      <span class="spacer"></span>
-      <div class="d-flex align-items-center">
+      <span class='spacer'></span>
+      <div class='d-flex align-items-center'>
         <!--        <button mat-button color="primary" class="mini mx-1">-->
         <!--          <mat-icon class="mr-1">admin_panel_settings</mat-icon>-->
         <!--          Dummy User-->
         <!--        </button>-->
         <!--        <button mat-flat-button color="accent" class="mini" (click)="logoutPrompt()">Logout</button>-->
-        <button mat-stroked-button class="pl-0 ml-1 mr-1 mat-subheading-2 mb-0 font-weight-bolder">
-          <div class="d-flex align-items-center">
-            <div class="toolbar__user-icon d-flex align-items-center justify-content-center pointer-event mr-3 ml-1">
-              <img
-                src='https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80'
-                alt="User Image" class="img-fluid avatar-image">
-            </div>
-            <ng-container *ngIf='(authFacade.authAdmin$ | async) as admin'>
+        <button mat-stroked-button class=' mx-1 mat-subheading-2 mb-0 font-weight-bolder' [matMenuTriggerFor]='userBarmenu'>
+          <div class='d-flex align-items-center'>
+            <ng-template [ngIf]='(authFacade.authAdmin$ | async)' let-admin [ngIfElse]='authAdminElse'>
               <span>{{admin.name || '--'}}</span>
-            </ng-container>
+            </ng-template>
+            <ng-template #authAdminElse>
+              --
+            </ng-template>
           </div>
         </button>
-        <button mat-icon-button [matMenuTriggerFor]="userBarmenu">
+        <button mat-icon-button [matMenuTriggerFor]='userBarmenu'>
           <mat-icon>expand_more</mat-icon>
         </button>
-        <mat-menu #userBarmenu="matMenu">
+        <mat-menu #userBarmenu='matMenu'>
           <button mat-menu-item [routerLink]="['/edit-profile']">Edit Profile</button>
           <button mat-menu-item [routerLink]="['/change-password']">Change Password</button>
-          <button mat-menu-item (click)="logoutPrompt()">Logout</button>
+          <button mat-menu-item (click)='logoutPrompt()'>Logout</button>
         </mat-menu>
       </div>
     </mat-toolbar>
     <main [ngClass]="{'internal_over-flow' : (authFacade.loggedIn$ | async)}">
       <div class='global-progress-bar' *ngIf='(uiStore.isLoading$ | async)'>
-          <mat-progress-bar color='accent' mode='indeterminate'></mat-progress-bar>
+        <mat-progress-bar color='accent' mode='indeterminate'></mat-progress-bar>
       </div>
       <router-outlet></router-outlet>
     </main>
