feat(questionnaire-core): multiple choice complete ui

--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -177,6 +177,9 @@
               </div>
             </div>
             <div class='col-12'>
+              <mat-checkbox class='example-margin mt-2'  color='primary'><h4 class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
+            </div>
+            <div class='col-12'>
               <div class='row mt-4 mb-2'>
                 <div class='col-3'><p class='text-muted'>POINTS</p></div>
                 <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
