--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -190,14 +190,43 @@
                     </mat-form-field>
                   </div>
                   <div class='col-9'>
-
+                    <div class='d-flex align-content-center'>
+                      <div class='skin-color mr-3'>
+                        <img class='img-fluid' src='https://img.pngio.com/blinkeze-eyelid-weights-fci-ophthalmics-skin-color-png-800_800.png' alt=''>
+                      </div>
+                      <div >
+                        <button mat-flat-button color="primary"  type="button"  >
+                          <mat-icon class="mr-2">upload</mat-icon>
+                          Upload
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class='col-12'>
+                <div class='row  mb-2'>
+                  <div class='offset-3'>
+                  </div>
+                  <div class='col-9' >
                     <mat-form-field class='w-100'>
-                      <mat-label>Answer 1</mat-label>
-                      <input matInput autocomplete='no' placeholder='Yes' type='text'>
+                      <mat-label>Title</mat-label>
+                      <input matInput autocomplete='no' type='text'>
                     </mat-form-field>
                   </div>
                 </div>
-
+              </div>
+              <div class='col-12'>
+                <div class='row  mb-2'>
+                  <div class='offset-3'>
+                  </div>
+                  <div class='col-9' >
+                    <mat-form-field class='w-100'>
+                      <mat-label>Subtitle</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
               </div>
             </div>
             <div class='col-12'>
