feat(core):merge initiate

--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -111,7 +111,7 @@
         </mat-card>
       </div>
 
-
+        <ng-template>
         <div class='col-lg-7'>
           <mat-card>
             <div class='row  '>
@@ -230,7 +230,7 @@
             </div>
           </mat-card>
         </div>
-
+        </ng-template>
     </div>
   </div>
 </div>
